--- a/style.css
+++ b/style.css
@@ -2,44 +2,45 @@
 
 
 * {
- padding: 0;
- margin: 0;
- box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
- background-image: url('img/pexels-mitchell-luo-3694711.jpg');
- background-size: cover;
+  background-image: url('img/pexels-mitchell-luo-3694711.jpg');
+  background-size: cover;
 }
 
 h1 {
- font-size: 40px;
- text-align: center;
- line-height: 60px;
- font-family: 'Akaya Telivigala',
-  cursive;
+  font-size: 40px;
+  text-align: center;
+  line-height: 60px;
+  font-family: 'Akaya Telivigala',
+    cursive;
 }
 
 div.character {
- position: fixed;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- cursor: pointer;
- height: 50vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  height: 50vh;
+  -webkit-tap-highlight-color: transparent;
 }
 
 img {
- height: 100%;
+  height: 100%;
 }
 
 h2 {
- text-align: center;
- font-family: 'arial',
-  cursive;
- position: fixed;
- bottom: 8vh;
- left: 0;
- width: 100%;
- font-size: 80px;
+  text-align: center;
+  font-family: 'arial',
+    cursive;
+  position: fixed;
+  bottom: 8vh;
+  left: 0;
+  width: 100%;
+  font-size: 80px;
 }
